# mandelbrot_set

./: CMakeLists.txt  README.md  mandelbrot.cpp  mandelbrot.cu  mandelbrot_kernel.cuh
